Find and generate access tokens

--- a/app/.env
+++ b/app/.env
@@ -26,3 +26,5 @@ APP_SECRET=113ad7f49d4e68d63fcda34d9bf67d5b
 DATABASE_URL="mysql://root:secret@database:3306/symfony_docker"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+APP_TOKEN_EXPIRATION_MINUTES=60
