--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -4,7 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+     token_expiration_minutes: '%env(APP_TOKEN_EXPIRATION_MINUTES)%'
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -20,6 +20,10 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
             - '../src/Tests/'
+    App\Repository\AccessTokenRepository:
+        arguments:
+            - '@Doctrine\Persistence\ManagerRegistry'
+            - '%token_expiration_minutes%'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
