--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -18,18 +18,15 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        token:
+            pattern: ^/app
+            custom_authenticators:
+                - App\Security\AccessTokenAuthenticator
         main:
+            pattern: ^/
             lazy: true
-            provider: app_user_provider
+            json_login:
+                check_path: /login
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/dashboard, roles: ROLE_USER }
