--- a/app/composer.json
+++ b/app/composer.json
@@ -21,9 +21,12 @@
         "symfony/proxy-manager-bridge": "5.3.*",
         "symfony/runtime": "5.3.*",
         "symfony/security-bundle": "5.3.*",
+        "symfony/twig-bundle": "5.3.*",
         "symfony/validator": "5.3.*",
         "symfony/webpack-encore-bundle": "^1.12",
-        "symfony/yaml": "5.3.*"
+        "symfony/yaml": "5.3.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "optimize-autoloader": true,
