--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,6 @@
 {
     "devDependencies": {
+        "@babel/preset-react": "^7.0.0",
         "@symfony/webpack-encore": "^1.0.0",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
@@ -14,7 +15,6 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     }
