--- a/app/package.json
+++ b/app/package.json
@@ -2,8 +2,12 @@
     "devDependencies": {
         "@babel/preset-react": "^7.0.0",
         "@symfony/webpack-encore": "^1.0.0",
+        "@tsconfig/recommended": "^1.0.1",
+        "@types/react-dom": "^17.0.9",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
+        "ts-loader": "^9.2.5",
+        "typescript": "^4.4.2",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
@@ -15,7 +19,11 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "axios": "^0.21.4",
+        "bootstrap": "5.1.0",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-bootstrap": "^2.0.0-beta.6",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^5.3.0"
     }
 }
